--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-touch": "~1.2.0",
     "angular-route": "~1.2.0",
     "components-font-awesome": "~4.2.0",
-    "angular-moment": "~0.8.2"
+    "angular-moment": "~0.8.2",
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
