--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,11 @@
     "angular-route": "~1.2.0",
     "components-font-awesome": "~4.2.0",
     "angular-moment": "~0.8.2",
-    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5"
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5",
+    "restangular": "~1.4.0",
+    "ng-file-upload": "~1.6.12",
+    "ng-file-upload-shim": "~1.6.12",
+    "angular-bootstrap": "~0.11.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
