--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "dependencies": {
     "express": "^4.9.5",
-    "gzippo": "^0.2.0"
+    "gzippo": "^0.2.0",
+    "morgan": "^1.3.2"
   },
   "devDependencies": {
     "grunt": "^0.4.1",
