--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "grunt-karma": "^0.8.2",
     "karma-coffee-preprocessor": "^0.2.1",
     "karma": "^0.12.9",
-    "grunt-contrib-compass": "^0.7.2", 
+    "grunt-contrib-compass": "^0.7.2" 
   }
 }
