--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "karma-coffee-preprocessor": "^0.2.1",
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
+    "karma-junit-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "phantomjs": "^1.9.13"
   }
